<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:android="http://schemas.android.com/apk/res/android">
    <item
        android:id="@+id/menu_home"
        android:icon="@drawable/baseline_home_24"
        android:title="@string/home" />
    <item
        android:id="@+id/menu_schedule"
        android:icon="@drawable/baseline_access_time_filled_24"
        android:title="@string/schedule" />
    <item
        android:id="@+id/menu_study"
        android:icon="@drawable/ic_school"
        android:title="@string/study" />
    <item
        android:id="@+id/menu_announcement"
        android:icon="@drawable/ic_notifications"
        android:title="@string/thong_bao" />
    <item
        android:id="@+id/menu_profile"
        android:icon="@drawable/ic_person"
        android:title="@string/profile" />
</menu>